ajout badge Linkedin

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-lg-offset-2">
+        <div class="col-lg-3 col-lg-offset-1">
           <div class="card">
             <div class="card-body">
               <a target="_blank" href="https://www.linkedin.com/in/mariontouja/"><i class="fab fa-linkedin"></i></a>
@@ -404,6 +404,7 @@
             </div>
           </div>
         </div>
+        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="vertical" data-theme="dark" data-vanity="mariontouja"><a class="LI-simple-link" href='https://fr.linkedin.com/in/mariontouja?trk=profile-badge'>Marion Touja</a></div>
       </div>
     </div>
   </div>
@@ -416,6 +417,7 @@
 
 <!-- Template Main Javascript File -->
 <script src="js/main.js"></script>
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 </body>
 </html>
