--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <div class="container">
 
 
-      <div class="row">
+      <div class="row centered">
         <div class="col-lg-offset-2 col-lg-3 col-lg-offset-1">
           <div class="card">
             <div class="card-body">
