--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
        -->
       <h4>COMPETENCES TECHNIQUES</h4>
       <div class="row">
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="fab fa-react logo react"></i>
             <div class="card-body">
@@ -81,7 +81,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="fab fa-js-square logo js"></i>
             <div class="card-body">
@@ -89,7 +89,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="devicon-bootstrap-plain logo bootstrap"></i>
             <div class="card-body">
@@ -100,7 +100,7 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="fab fa-node-js logo node"></i>
             <div class="card-body">
@@ -108,7 +108,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="fab fa-git logo git"></i>
             <div class="card-body">
@@ -116,7 +116,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="devicon-mongodb-plain logo mongo"></i>
             <div class="card-body">
@@ -127,7 +127,7 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="fab fa-html5 logo html"></i>
             <div class="card-body">
@@ -135,7 +135,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="fab fa-css3-alt logo css"></i>
             <div class="card-body">
@@ -143,7 +143,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="devicon-mysql-plain logo sql"></i>
             <div class="card-body">
@@ -154,14 +154,14 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <div class="card-body">
               <h6 class="card-title">Redux</h6>
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="devicon-linux-plain logo linux"></i>
             <div class="card-body">
@@ -169,7 +169,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
             <i class="devicon-travis-plain logo travis"></i>
             <div class="card-body">
