modification de la section escalade

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           <img class="card-img-top" src="img/climbing.svg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title climb">ESCALADE</h5>
-            <p class="card-text">5 ans de pratique en salle (bloc) et en extérieur (difficulté)</p>
+            <p class="card-text">5 ans de pratique en salle (bloc) et en extérieur (difficulté).<br> Coach occasionnel pour les Poussins et les Microbes<br> (club ASPTT).<br> Juge arbitre sur les compétitions régionales (FFME)</p>
           </div>
         </div>
       </div>
