--- a/index.html
+++ b/index.html
@@ -156,8 +156,9 @@
       <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
+            <i class="devicon-ubuntu-plain logo ubuntu"></i>
             <div class="card-body">
-              <h6 class="card-title">Redux</h6>
+              <h6 class="card-title">Ubuntu</h6>
             </div>
           </div>
         </div>
@@ -179,6 +180,8 @@
         </div>
       </div>
     </div>
+
+    
 
     <div class="col-md-offset-2 col-md-4 col-sm-offset-2 col-sm-4">
 
