modification de la partie Diplômes

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
-            <i class="devicon-travis-plain logo travis"></i>
+            <img href="img/npm.svg" class="logo":>
             <div class="card-body">
               <h6 class="card-title">Travis</h6>
             </div>
@@ -201,13 +201,13 @@
   <div class="container desc">
     <div class="row">
       <div class="col-lg-2 col-lg-offset-1">
-        <h5>FORMATIONS</h5>
+        <h5>DIPLOMES</h5>
       </div>
       <div class="col-lg-6 wcs">
         <p>
           <!-- Kékecé que cette balise ?? -->
-          <t>Développeur Web & mobile</t><br/> WILD CODE SCHOOL - Nantes <br/>
-          <i>5 mois</i>
+          <t>Titre professionnel Développeur & Développeur Web Mobile Niveau III</t><br/> WILD CODE SCHOOL - Nantes <br/>
+          <i></i>
         </p>
         <ul>
           <li>Concevoir et développer une application web. </li>
