--- a/index.html
+++ b/index.html
@@ -68,9 +68,6 @@
   <div class="row skills">
     <div id="tech" class="col-sm-3 col-sm-offset-2">
 
-      <!-- Il vaut mieux écrire 'normalement' en html et faire un upercase
-      dans ton css
-       -->
       <h4>COMPETENCES TECHNIQUES</h4>
       <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-4">
@@ -205,7 +202,6 @@
       </div>
       <div class="col-lg-6 wcs">
         <p>
-          <!-- Kékecé que cette balise ?? -->
           <t>Titre professionnel Développeur & Développeur Web Mobile Niveau III</t><br/> WILD CODE SCHOOL - Nantes <br/>
           <i></i>
         </p>
@@ -252,46 +248,44 @@
 <section id="work" name="work">
   <div class="container desc">
     <div class="row">
-      <div class="col-lg-2 col-lg-offset-1">
-        <h5>REALISATIONS</h5>
+      <div class="col-lg-2">
+        <h5>PROJETS</h5>
       </div>
-      <div class="col-lg-6">
-        <p><img class="img-responsive" src="img/bicool.png" alt=""></p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <a target="_blank" href="https://mtouja.github.io/" class="projets">BICOOL</a>
-        </p>
-        <p>
-          Application permettant de réserver son vélo Bicloo 20 minutes avant l'arrivée en station.<br/>
-          Temps de projet: 10 jours<br/>
-          Equipe: 4 personnes<br/>
-          <strong>React, Reactstrap, JS(ES6), Git, Scrum</strong><br/>
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-2 col-lg-offset-1">
-      </div>
-      <div class="col-lg-6 wcs">
-        <p><img class="img-responsive" src="img/somanyparis.png" alt=""></p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <a target="_blank" href="https://antoinenourris.fr/somanyparis/" class="projets">SO MANY PARIS</a>
-        </p>
-        <p>
-          Réalisation d'un blog photo sur la ville de Paris<br/>
-          Equipe: 4 personnes<br/>
-          <strong>HTML5, CSS3, Bootstrap, Git, Scrum</strong><br/>
-        </p>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="col-lg-4 col-md-4 hovereffect">
+            <img class="img-responsive" src="https://i.ibb.co/D4txVsJ/Capture-d-cran-de-2019-02-05-19-15-35.png" alt="" width="750px" height="100%">
+              <div class="overlay">
+                <h2><b>so many paris</b></h2>
+                <p>Réalisation d'un blog photo sur la ville de Paris</br>Equipe: 4 personnes</p>
+                <p class="text-uppercase techno">HTML5, CSS3, Bootstrap, Git, Scrum</p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-4 hovereffect">
+            <img class="img-responsive" src="https://i.ibb.co/hWBPnnt/Capture-d-cran-de-2019-02-05-18-36-44.png" alt="" width="750px">
+              <div class="overlay">
+                <h2><b>bicool</b></h2>
+                <p>Application permettant de réserver son vélo Bicloo 20 minutes avant l'arrivée en station.</br>Temps de projet: 10 jours</br>Equipe: 4 personnes</p>
+                <p class="text-uppercase techno">React, Reactstrap, JS(ES6), Git, Scrum</p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-4 hovereffect">
+            <img class="img-responsive" src="https://i.ibb.co/hdHJDt9/Capture-d-cran-de-2019-02-05-20-02-45.png" alt="" width="750px">
+              <div class="overlay">
+                <h2><b>marmirion</b></h2>
+                <p>Website créé pour faciliter la recherche de recettes intégrées dans la base de données que j'ai crée. Possibilité d'effectuer un recherche par titre de recette par saison, par légume etc etc</br>Temps de projet: 1 mois</br>Equipe: 1 personne</p>
+                <p class="text-uppercase techno">React, Reactstrap, JS(ES6), Git, mongoDB, nodeJS, express</p>
+              </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
 <div class="container desc">
-  <div class="row">
+  <div class="row jobs">
     <div class="col-lg-2 col-lg-offset-1">
       <h5>PARCOURS PROFESSIONNEL</h5>
     </div>
