correction fautes orthographe

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <img class="img-responsive" src="https://i.ibb.co/hdHJDt9/Capture-d-cran-de-2019-02-05-20-02-45.png" alt="" width="750px">
               <div class="overlay">
                 <h2><b>marmirion</b></h2>
-                <p>Website créé pour faciliter la recherche de recettes intégrées dans la base de données que j'ai crée. Possibilité d'effectuer un recherche par titre de recette par saison, par légume etc etc</br>Temps de projet: 1 mois</br>Equipe: 1 personne</p>
+                <p>Website fullstack créé pour faciliter la recherche de recettes intégrées dans une base de données mongoDB. Possibilité d'effectuer une recherche par titre de recette, par saison, par légume, par ingédient etc etc</br>Temps de projet: 1 mois</br>Equipe: 1 personne</p>
                 <p class="text-uppercase techno">React, Reactstrap, JS(ES6), Git, mongoDB, nodeJS, express</p>
               </div>
           </div>
