label Pedagogic Projects & Side Projects

--- a/index.html
+++ b/index.html
@@ -249,9 +249,8 @@
   <div class="container desc">
     <div class="row">
       <div class="col-lg-2">
-        <h5>PROJETS</h5>
+        <h5 class="text-uppercase">pedagogic projects</h5>
       </div>
-
       <div class="row">
         <div class="col-lg-6">
           <div class="col-lg-4 col-md-4 hovereffect">
@@ -270,18 +269,25 @@
                 <p class="text-uppercase techno">React, Reactstrap, JS(ES6), Git, Scrum</p>
               </div>
           </div>
-          <div class="col-lg-4 col-md-4 hovereffect">
-            <img class="img-responsive" src="https://i.ibb.co/hdHJDt9/Capture-d-cran-de-2019-02-05-20-02-45.png" alt="" width="750px">
-              <div class="overlay">
-                <h2><b>marmirion</b></h2>
-                <p>Website fullstack créé pour faciliter la recherche de recettes intégrées dans une base de données mongoDB. Possibilité d'effectuer une recherche par titre de recette, par saison, par légume, par ingédient etc etc</br>Temps de projet: 1 mois</br>Equipe: 1 personne</p>
-                <p class="text-uppercase techno">React, Reactstrap, JS(ES6), Git, mongoDB, nodeJS, express</p>
-              </div>
-          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-2">
+          <h5 class="text-uppercase">"side projects"</h5>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="col-lg-4 col-md-4 hovereffect">
+              <img class="img-responsive" src="https://i.ibb.co/hdHJDt9/Capture-d-cran-de-2019-02-05-20-02-45.png" alt="" width="750px">
+                <div class="overlay">
+                  <h2><b>marmirion</b></h2>
+                  <p>Website fullstack créé pour faciliter la recherche de recettes intégrées dans une base de données mongoDB. Possibilité d'effectuer une recherche par titre de recette, par saison, par légume, par ingédient etc etc</br>Temps de projet: 1 mois</br>Equipe: 1 personne</p>
+                  <p class="text-uppercase techno">React, Reactstrap, JS(ES6), Git, mongoDB, nodeJS, express</p>
+                </div>
+            </div>
         </div>
       </div>
     </div>
-  </div>
 </section>
 
 <div class="container desc">
