ajout de Chipset Builders en pedagogic project

--- a/index.html
+++ b/index.html
@@ -254,19 +254,19 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="col-lg-4 col-md-4 hovereffect">
-            <img class="img-responsive" src="https://i.ibb.co/D4txVsJ/Capture-d-cran-de-2019-02-05-19-15-35.png" alt="" width="750px" height="100%">
-              <div class="overlay">
-                <h2><b>so many paris</b></h2>
-                <p>Réalisation d'un blog photo sur la ville de Paris</br>Equipe: 4 personnes</p>
-                <p class="text-uppercase techno">HTML5, CSS3, Bootstrap, Git, Scrum</p>
-              </div>
-          </div>
-          <div class="col-lg-4 col-md-4 hovereffect">
             <img class="img-responsive" src="https://i.ibb.co/hWBPnnt/Capture-d-cran-de-2019-02-05-18-36-44.png" alt="" width="750px">
               <div class="overlay">
                 <h2><b>bicool</b></h2>
                 <p>Application permettant de réserver son vélo Bicloo 20 minutes avant l'arrivée en station.</br>Temps de projet: 10 jours</br>Equipe: 4 personnes</p>
                 <p class="text-uppercase techno">React, Reactstrap, JS(ES6), Git, Scrum</p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-4 hovereffect">
+            <img class="img-responsive" src="https://i.ibb.co/WgCNPyk/Capture-d-cran-de-2019-02-06-09-39-10.png" alt="" width="750px" height="100%">
+              <div class="overlay">
+                <h2><b>chipset builders</b></h2>
+                <p>Premier projet client. Réalisation d'une app pour faciliter la création des malettes de jetons lors de l'organisation de tournois de poker.</br>Temps de projet: 12 semaines</br>Equipe: 4 personnes</p>
+                <p class="text-uppercase techno">Canvas JS, React/Redux, JS(ES6), Git, Scrum</p>
               </div>
           </div>
         </div>
