quick code review and clean code

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div class="row skills">
     <div id="tech" class="col-sm-3 col-sm-offset-2">
 
-      <h4>COMPETENCES TECHNIQUES</h4>
+      <h4 class="text-uppercase">competences techniques</h4>
       <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-4">
           <div class="card">
@@ -182,7 +182,7 @@
 
     <div class="col-md-offset-2 col-md-4 col-sm-offset-2 col-sm-4">
 
-      <h4>COMPETENCES TRANSVERSALES</h4>
+      <h4 class="text-uppercase">compétences transversales</h4>
       <ul id="transverses">
         <li>Anglais technique</li>
         <li>Expression des besoins</li>
@@ -197,8 +197,8 @@
 <section id="resume" name="resume">
   <div class="container desc">
     <div class="row">
-      <div class="col-lg-2 col-lg-offset-1">
-        <h5>DIPLOMES</h5>
+      <div class="col-lg-2">
+        <h5 class="text-uppercase">diplomes</h5>
       </div>
       <div class="col-lg-6 wcs">
         <p>
@@ -215,21 +215,21 @@
         <p>
           <sm>Fin de cursus: 2019</sm><br/>
           <imp>
-            <sm>EN COURS</sm>
+            <sm class="text-uppercase">en cours</sm>
           </imp>
         </p>
       </div>
-      <div class="col-lg-6 col-lg-offset-3">
+      <div class="col-lg-6 col-lg-offset-2">
         <p>
           <t class="diplomes">BTS Ventes et Productions Touristiques</t><br/> IMS Nantes <br/>
         </p>
       </div>
       <div class="col-lg-3">
         <p>
-          <sm>JUIN 2006</sm>
+          <sm class="text-uppercase">juin 2006</sm>
         </p>
       </div>
-      <div class="col-lg-6 col-lg-offset-3">
+      <div class="col-lg-6 col-lg-offset-2">
         <p>
           <t class="diplomes">BAC Littéraire</t><br/> Nantes <br/>
         </p>
@@ -281,7 +281,7 @@
               <img class="img-responsive" src="https://i.ibb.co/hdHJDt9/Capture-d-cran-de-2019-02-05-20-02-45.png" alt="" width="750px">
                 <div class="overlay">
                   <h2><b>marmirion</b></h2>
-                  <p>Website fullstack créé pour faciliter la recherche de recettes intégrées dans une base de données mongoDB. Possibilité d'effectuer une recherche par titre de recette, par saison, par légume, par ingédient etc etc</br>Temps de projet: 1 mois</br>Equipe: 1 personne</p>
+                  <p>Website fullstack créé pour faciliter la recherche de recettes intégrées dans une base de données mongoDB.<br/>Possibilité d'effectuer une recherche par titre de recette,<br/> par saison, par légume, par ingédient etc etc</br>Temps de projet: 1 mois</br>Equipe: 1 personne</p>
                   <p class="text-uppercase techno">React, Reactstrap, JS(ES6), Git, mongoDB, nodeJS, express</p>
                 </div>
             </div>
@@ -292,8 +292,8 @@
 
 <div class="container desc">
   <div class="row jobs">
-    <div class="col-lg-2 col-lg-offset-1">
-      <h5>PARCOURS PROFESSIONNEL</h5>
+    <div class="col-lg-2">
+      <h5 class="text-uppercase">parcours professionnel</h5>
     </div>
     <div class="col-lg-6 wcs">
       <p>
@@ -315,7 +315,7 @@
         <sm>2015 - 2018</sm>
       </p>
     </div>
-    <div class="col-lg-6 col-lg-offset-3 wcs">
+    <div class="col-lg-6 col-lg-offset-2 wcs">
       <p>
         <t><i class="fas fa-globe-africa earth"></i>Forfaitiste</t><br/> DONATELLO <br/>
       </p>
@@ -332,7 +332,7 @@
         <sm>2008 - 2015</sm>
       </p>
     </div>
-    <div class="col-lg-6 col-lg-offset-3">
+    <div class="col-lg-6 col-lg-offset-2">
       <p>
         <t><i class="fas fa-globe-africa earth"></i>Conseiller voyages</t><br/><br/>
       </p>
@@ -341,7 +341,7 @@
           <ul>
             <li>Thomas Cook - 4 mois</li>
             <li>Grand Lieu Voyages - 6 mois</li>
-            <li>Leclerc Voyages - 2 ans</li>
+            <li>Leclerc Voyages - 2 ans (dont stage de 6 mois)</li>
           </ul>
         </more>
       </p>
